--- a/social-links-profile-main/style.css
+++ b/social-links-profile-main/style.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+
 body {
     text-align: center;
     background-color: hsl(0, 0%, 8%);
+    font-family: "Inter", Comic Sans MS;
 }
 
 section {
@@ -17,8 +20,7 @@ section {
 }
 
 img {
-    height: 176px;
-    width: 176px;
+    width: 125px;
     display: block;
     margin-left: auto;
     margin-right: auto;
